--- a/MD/C3.7_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C3.7_DulceJasminVillalobosPerez_Verde.md
@@ -72,8 +72,10 @@ Fuente de consulta: [Random Nerd Tutorials](https://randomnerdtutorials.com/esp3
 ![Evidencia 3](../IMG/C3.7_Evidencia3.PNG)
 
 
+4. Evidencia proporcionada por el compañero con los componentes: 
 
-    Evidencia proporcionada por el compañero con los componentes: 
+
+**Venegas Medina Jose Alfredo:**   
 
 ![Evidencia 1](../IMG/C3.7_Evidenci6.jpg)
 ![Evidencia 2](../IMG/C3.7_Evidencia5.png)
