--- a/MD/C3.8_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C3.8_DulceJasminVillalobosPerez_Verde.md
@@ -65,8 +65,10 @@ Fuente de consulta: [Random Nerd Tutorials](https://randomnerdtutorials.com/esp3
 ![Evidencia 3](../IMG/C3.8_Evidencia3.PNG)
 ![Evidencia 4](../IMG/C3.8_Evidencia.PNG)
 
- Evidencia proporcionada por el compañero con los componentes: 
 
+4. Evidencia proporcionada por el compañero con los componentes: 
+
+    **Venegas Medina Jose Alfredo:**   
 ![Evidencia 5](../IMG/C3.8_Evidencia4.jpg)
 ![Evidencia 6](../IMG/C3.8_Evidencia5.jpg)
 ![Evidencia 7](../IMG/C3.8_Evidencia6.png)
