--- a/MD/C3.6_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C3.6_DulceJasminVillalobosPerez_Verde.md
@@ -63,8 +63,9 @@ Con el ponteciometro de va cambiando el valor que se imprime en la grafica , el 
 ![Evidencia 2](../IMG/C3.6Evidencia2.PNG)
 ![Evidencia 3](../IMG/C3.6Evidencia3.PNG)
 
-
-    Esta evidencia fue proporcionada por nuestro compañero.
+4. Esta evidencia fue proporcionada por nuestro compañero.
+    
+**Venegas Medina Jose Alfredo:**   
 
 ![Evidencia 6](../IMG/C3.6_Evidencia5.jpg)
 ___
