--- a/MD/A4.1_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/A4.1_DulceJasminVillalobosPerez_Verde.md
@@ -55,12 +55,12 @@ ___
     
 <p align="center"> 
     <strong>Figura 1 Circuito ESP32 IC L293 Motor DC</strong>
-    <img alt="Logo" src="../img/C4.x_ESP32_L293_ControlMotor.png" width=700 height=350>
+    <img alt="Logo" src="../IMG/C4.x_ESP32_L293_ControlMotor.png" width=700 height=350>
 </p>
 
 3. Coloque aqui la imagen del circuito ensamblado
-![Evidencia 1](../img/A4.1_Evidencia1.jpg)
-![Evidencia 1](../img/A4.1_Evidencia2.jpg)
+![Evidencia 1](../IMG/A4.1_Evidencia1.jpg)
+![Evidencia 1](../IMG/A4.1_Evidencia2.jpg)
 
 4. Coloque en este lugar el programa creado dentro del entorno de Arduino
 
@@ -201,16 +201,16 @@ void Leer()
 }
 ```
 
-![Evidencia 3](../img/A4.1_Evidencia6.png)
+![Evidencia 3](../IMG/A4.1_Evidencia6.png)
 
 5. Coloque aquí evidencias que considere importantes durante el desarrollo de la actividad.
 - Evidencia fisica realizada por: Jose Alfredo Venegas Medina
 - [Presentacion del circuito (VIDEO)](https://youtu.be/f110lnEEsZA) 
 
-![Evidencia 4](../img/A4.1_A1.png)
-![Evidencia 5](../img/A4.1_A2.png)
-![Evidencia 6](../img/A4.1_A3.png)
-![Evidencia 7](../img/A4.1_A4.png)
+![Evidencia 4](../IMG/A4.1_A1.png)
+![Evidencia 5](../IMG/A4.1_A2.png)
+![Evidencia 6](../IMG/A4.1_A3.png)
+![Evidencia 7](../IMG/A4.1_A4.png)
 
 
 6. Conclusiones
