--- a/MD/C5.2_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C5.2_DulceJasminVillalobosPerez_Verde.md
@@ -112,6 +112,11 @@ void loop() {
 ![Evidencia 8](../IMG/C5.2_Evidencia8.png)
 
 ___
+![Evidencia 9](../IMG/C5.2_Evidence1.png)
+![Evidencia 10](../IMG/C5.2_Evidence2.png)
+![Evidencia 11](../IMG/C5.2_Evidence3.png)
+![Evidencia 12](../IMG/C5.2_Evidence4.png)
+
 ___
 ___
 
